# anythingpassword

./: README.md  setup.py
.github/workflows/: ci.yml
anythingpassword/: cli.py  encryption_key.key  passwordlist.py  pyproject.toml
anythingpassword.egg-info/: PKG-INFO  SOURCES.txt
anythingpassword/tests/: test_anythingpassword.py
