[project]
name = "akinboye"
version = "0.2.3"
authors = [
  { name="akinboye", email="mailakinboye@gmail.com" },
]
description = "This Python application provides a suite of tools for generating, analyzing, encrypting, and managing passwords securely."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/akinboye/anythingpassword"
Issues = "https://github.com/akinboye/anythingpassword/issues"